-
Bug
-
Resolution: Fixed
-
P4: Low
-
Qt Creator 13.0.2
-
None
-
-
7b08a8131 (master)
If you press Stop it will send a TERM signal to the remote process. If the process exits within 2 seconds, it should show message "/path/to/process on remote-host exited with code 123". If it had to be killed as it took longer than 2 seconds, it should show "The process was ended forcefully.". This is like how it was in Qt Creator 6.0.2. It seems to have changed in newer versions of Qt Creator.
Currently it will always show "The process was ended forcefully." when pressing Stop regardless of whether it exited in response to TERM signal before the timeout or whether it was killed with KILL signal after the timeout.
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-31141 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
587737,3 | ProjectExplorer: Always print process exit code on normal exit | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |