ProjectExplorer: Always print process exit code on normal exit

... in SimpleTargetRunner.

Fixes: QTCREATORBUG-31141
Change-Id: Iede5d88c11312152f771d3008bb1cd6d471cfaf3
Reviewed-by: hjk <hjk@qt.io>